--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 			</div>
 		</div>
 		<div id="preview">
-			preview
+			<div class="previewLoadingCover"></div>
 		</div>
 	</div>
 	<div id="footer">
@@ -405,7 +405,10 @@
 	<script src="js/pageguide.min.js"></script>
 	<script type="text/javascript" src="js/layout.js"></script>
 	<script src='js/popupController.js'></script>
+	<script src='js/generator.js'></script>
 	<script src='js/inputInfo.js'></script>
+	<script src='js/dataInfo.js'></script>
+	<script src='js/preview.js'></script>
 	<script src="js/tabcontent.js" type="text/javascript"></script>
 	<script src='js/login.js'></script>
 	<script src='js/help.js'></script>
