logo and login log

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>DataGoPro</title>
 	<meta charset="utf-8">
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="starlogo.png" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	
@@ -41,7 +41,7 @@
 <!-- log in windom -->
 	<div id ="element_to_pop_up">
         <div id="logindiv">
-          <h1 id='loginh1'>Log in to Datagopro</h1>
+          <h1 id='loginh1'><img src="starlogo.png" id="loginlogo" height="50" width="50"> &nbsp; &nbsp; &nbsp;Log in to Datagopro</h1>
           <div id='logform'>
             <span id='logintext'> Please log in via <br> </span>
             
