--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 						<input class="btn btn-default" editable="false" readonly="on" placeholder="Data Type" onclick="chooseDataType(this)">
 						<i class="fa fa-folder-open"></i>
 					</div>
+					<span id="data-block-info"><span>
 				</div>
 			</div>
 			<div id="add" class='eighth_element'>
