Debug with number

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 		</p>© 2015 Datagopro, Group 11 CP3101B, NUS
 
 	</div>
-	<div id="popup">
+	<div id="popup" style="display:none">
 		<ul class="tabs">
 		    <li id="anumber"><a id="anumber" href="#number">Number</a></li>
 		    <li id="astring"><a id="astring" href="#string">String</a></li>
@@ -222,7 +222,7 @@
 							<option value='float'>Float</option>
 						</select>
 					</div>
-					<div id="precisionDiv" class="form-group">
+					<div id="precisionDiv" class="form-group" style="display:none">
 						<label for="precision" >precision</label>
 						<input id="precision" class='floatprecision form-control' type='number'></input>
 					</div>
