test google show name

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 		  <li id='fourth_element'><a id='help' data-target="#help">Help</a></li>
 		  <li id='fifth_element'><a id="mybutton">Login</a><li>
 		</ol> 
-		<div id="profile"> </div>
+		<div id="profile">
+		  <span> </span>
+		</div>
 	</div>
 	<div id="mainbody">
 		<div id="editor">
