login and logout

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 		  <li id='second_element'><a data-target="#timeline">My Input</a></li>
 		  <li id='third_element'><a data-target="#popular">Popular Input</a></li>
 		  <li id='fourth_element'><a id='help' data-target="#help">Help</a></li>
-		  <li id='fifth_element'><a id="mybutton">Login</a></li>
-		  <li id='fifth_element'><a id="logoutbutton">Logout</a></li>
+		  <li id='fifth_element'><a id="mybutton">Login</a><a id="logoutbutton" style="display:none">Logout</a></li>
 		</ol> 
 		<div id="profile">
 		  <span> </span>
