login and logout testing

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<img src="img/logo2.png">
 		<ol id="nav" class="breadcrumb">
 		  <li class="active" id='first_element'><a data-target="#editor">New Data</a></li>
-		  <li id='second_element'><a data-target="#timeline">My Input</a></li>
+		  <li id='second_element' class="logininput" style="display:none"><a data-target="#timeline">My Input</a></li>
 		  <li id='third_element'><a data-target="#popular">Popular Input</a></li>
 		  <li id='fourth_element'><a id='help' data-target="#help">Help</a></li>
 		  <li id='fifth_element'><a id="mybutton">Login</a><a id="logoutbutton" style="display:none">Logout</a></li>
