--- a/index.html
+++ b/index.html
@@ -290,22 +290,22 @@
 		    <li id="agraph"><a id="agraph" href="#graph">Graph</a></li>
 		</ul>
 		<div class="tabcontents">
-			<!-- <i class="fa fa-question-circle fa-2x"></i>  -->
+			<i class="fa fa-question-circle fa-2x"></i> 
 		    <div id="number" class="container popup">
 		    	<div class="form-inline">
 		    		<div class='form-group'>
-						<select id="numbertype" class='numbertype form-control' onchange="numberChanged(this)">
+						<select id="numbertype" class='form-control' onchange="numberChanged(this)" data-toggle="tooltip" data-placement="top" data-original-title="Click to choose Integer or Float.">
 							<option selected disabled hidden value=''>Number type</option>
 							<option value='integer'>Integer</option>
 							<option value='float'>Float</option>
 						</select>
 					</div>
-					<div id="precisionDiv" class="form-group">
+					<div id="precisionDiv" class="form-group" data-toggle="tooltip" data-placement="top" data-original-title="Enter precision when Float is chosen.">
 						<label for="precision" >precision</label>
-						<input id="precision" class='floatprecision form-control' type='number'></input>
+						<input id="precision" class='form-control' type='number'></input>
 					</div>
 				</div>
-				<div class="form-inline">
+				<div class="form-inline range" data-toggle="tooltip" data-placement="right" data-original-title="Specify the range you want here.">
 					<div class='form-group'>
 						<label for="min" >Min</label>
 						<input id="min" class='form-control' type='number'></input>
@@ -318,12 +318,12 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-12">
-						<span>Advanced settings</span><i class="fa fa-angle-double-down"></i>
+						<span>Advanced settings</span><i class="fa fa-angle-double-down" data-toggle="tooltip" data-placement="right" data-original-title="Click here to show or hide advanced settings."></i>
 					</div>
 				</div>
 				<div class="form-inline advanced" style="display:none">				
 					<div class='form-group'>
-						<select id="parity" class='form-control'>
+						<select id="parity" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose even or odd if you want Integer.">
 							<option selected disabled hidden value=''>Parity</option>
 							<option value='even'>Even</option>
 							<option value='odd'>Odd</option>
@@ -344,12 +344,12 @@
 		    </div>
 		    <div id="string" class="container popup">
 		    	<div class="form-inline">
-		    		<div class='form-group'>
+		    		<div class='form-group' data-toggle="tooltip" data-placement="top" data-original-title="Enter the length of the string you want.">
 		    			<label for="stringlength" >String length</label>
-						<input id="stringlength" class='stringlength form-control' type='number'></input>
+						<input id="stringlength" class='form-control' type='number'></input>
 					</div>
 					<div class='form-group'>
-						<select id="charset" class='choosecharset form-control'>
+						<select id="charset" class='choosecharset form-control' data-toggle="tooltip" data-placement="top" data-original-title="Click to choose a charset you want.">
 							<option value='' hidden disabled selected>Charset</option>
 							<option value='ascii'>ASCII</option>
 							<option value='unicode'>Unicode</option>
@@ -358,25 +358,25 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-12">
-						<span>Advanced settings</span><i class="fa fa-angle-double-down"></i>
+						<span>Advanced settings</span><i class="fa fa-angle-double-down" data-toggle="tooltip" data-placement="right" data-original-title="If you want a long string of lines of words. Click here."></i>
 					</div>
 				</div>
 				<div class="form-inline advanced" style="display:none">
-					<div class='form-group'>
+					<div class='form-group' data-toggle="tooltip" data-placement="top" data-original-title="Specify the length of each line here.">
 						<label for="linglength" >Line length</label>
 						<input id="linelength" class='linelength form-control' type='number'></input>
 					</div>
-					<div class='form-group'>
+					<div class='form-group'data-toggle="tooltip" data-placement="top" data-original-title="Specify the line break symbol here.">
 						<label for="linebreak" >Line break</label>
 						<input id="linebreak" class='linebreak form-control' type='text'></input>
 					</div>
 				</div>
 				<div class="form-inline advanced" style="display:none">
-					<div class='form-group'>
+					<div class='form-group'data-toggle="tooltip" data-placement="bottom" data-original-title="Specify the length of each word here.">
 						<label for="wordlength" >Word length</label>
 						<input id="wordlength" class='wordlength form-control' type='number'></input>
 					</div>
-					<div class='form-group'>
+					<div class='form-group'data-toggle="tooltip" data-placement="bottom" data-original-title="Specify the word break symbol here.">
 						<label for="wordbreak" >Word break</label>
 						<input id="wordbreak" class='wordbreak form-control' type='text'></input>
 					</div>				
@@ -395,45 +395,44 @@
 		    </div>
 		    <div id="graph" class="container popup">
 		    	<div class="form-inline">
-					<div class='form-group'>
+					<div class='form-group' data-toggle="tooltip" data-placement="top" data-original-title="Enter the number of graph nodes here.">
 						<label for="node" >No. of nodes</label>
 						<input id="node" class='numbermin form-control' type='number'></input>
 					</div>
 				</div>
 				<div class="form-inline">
 					<div class="checkbox">
-						<label>
+						<label data-toggle="tooltip" data-placement="top" data-original-title="Check here if you want the graph to be directed.">
 							<input id="direct" type="checkbox"> is Directed
 						</label>
 					</div>
 					<div class="checkbox">
-						<label>
+						<label data-toggle="tooltip" data-placement="top" data-original-title="Check here if you want edges of the graph to be weighted.">
 							<input id="weight" type="checkbox"> is Weighted
 						</label>
 					</div>
 					<div class="checkbox">
-						<label>
+						<label data-toggle="tooltip" data-placement="right" data-original-title="Check here if you want the graph to be a tree.">
 							<input id="tree" type="checkbox"> is Tree
 						</label>
 					</div>
 				</div>
 				<div class="form-inline nottree">
-					<div class="form-group">
+					<div class="form-group" data-toggle="tooltip" data-placement="top" data-original-title="Enter the number of edges in integer or density of edges in percentage. ">
 						<label for="edge" >No. of edges</label>
 						<input id="edge" class='numbermax form-control' type='number'></input>
 					</div>
 					<div class="checkbox">
-						<label>
+						<label data-toggle="tooltip" data-placement="top" data-original-title="Check here if you want the graph to be connected.">
 							<input id="connect" type="checkbox"> is Connected
 						</label>
 					</div>
 				</div>
-				<div class="form-inline weightrange" style="display:none">
+				<div class="form-inline weightrange" style="display:none" data-toggle="tooltip" data-placement="top" data-original-title="Specify the range of the edge weight here.">
 					<div class='form-group'>
-						<label for="weigthmin" >Weight min</label>
-						<input id="weigthmin" class='form-control' type='number'></input>
+						<label for="weightmin" >Weight min</label>
+						<input id="weightmin" class='form-control' type='number'></input>
 					</div>
-					
 					<div class='form-group'>
 						<label for="weightmax" >Weight max</label>
 						<input id="weightmax" class='form-control' type='number'></input>
@@ -490,6 +489,7 @@
 	<script type="text/javascript" src="js/layout.js"></script>
 	<script src='js/popupController.js'></script>
 	<script src="js/tabcontent.js" type="text/javascript"></script>
+	<script src="js/tabHelp.js" type="text/javascript"></script>
 	<script src='js/inputInfo.js'></script>
 	<script src='js/login.js'></script>
 	<script src='js/help.js'></script>
