--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 				</div>
 				<div class="form-inline advanced" style="display:none">				
 					<div class='form-group'>
-						<select id="parity" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose even or odd if you want Integer.">
+						<select id="parity" disabled="disabled" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose even or odd if you want Integer.">
 							<option selected disabled hidden value=''>Parity</option>
 							<option value='even'>Even</option>
 							<option value='odd'>Odd</option>
