docked the export and generate div to bottom

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 				</div>
 			</div>
 			<div id="generate">
-				<button type='button' id="tenth_element" class='btn'>Generate</button>
-				<i class="fa fa-play"></i>
+				<button type='button' id="tenth_element" class='btn'>Download</button>
+				<i class="fa fa-download"></i>
 			</div> 
 		</div>
 		<div id="timeline" style="display:none">
