--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
 				</div>
 				<div class="form-inline advanced" style="display:none">				
 					<div class='form-group'>
-						<select id="parity" disabled="disabled" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose even or odd if you want Integer.">
+						<select id="parity" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose even or odd if you want Integer.">
+							<option value='none'>None</option>
 							<option value='even'>Even</option>
 							<option value='odd'>Odd</option>
 						</select>
