--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 					</div>
 					<div id="precisionDiv" class="form-group" data-toggle="tooltip" data-placement="top" data-original-title="Enter precision when Float is chosen." style="display:none">
 						<label for="precision" >precision</label>
-						<input id="precision" class='form-control' type='number'></input>
+						<input id="precision" class='form-control' type='number' min="1"></input>
 					</div>
 				</div>
 				<div class="form-inline range" data-toggle="tooltip" data-placement="right" data-original-title="Specify the range you want here.">
@@ -282,7 +282,7 @@
 		    	<div class="form-inline">
 		    		<div class='form-group' data-toggle="tooltip" data-placement="top" data-original-title="Enter the length of the string you want.">
 		    			<label for="stringlength" >String length</label>
-						<input id="stringlength" class='form-control' type='number'></input>
+						<input id="stringlength" class='form-control' type='number' min="1"></input>
 					</div>
 					<div class='form-group'>
 						<select id="charset" class='form-control' data-toggle="tooltip" data-placement="top" data-original-title="Click to choose a charset you want.">
@@ -299,7 +299,7 @@
 				<div class="form-inline advanced" style="display:none">
 					<div class='form-group' data-toggle="tooltip" data-placement="top" data-original-title="Specify the length of each line here.">
 						<label for="linglength" >Line length</label>
-						<input id="linelength" class='linelength form-control' type='number'></input>
+						<input id="linelength" class='linelength form-control' type='number' min="1"></input>
 					</div>
 					<div class='form-group'data-toggle="tooltip" data-placement="top" data-original-title="Specify the line break symbol here.">
 						<label for="linebreak" >Line break</label>
@@ -309,7 +309,7 @@
 				<div class="form-inline advanced" style="display:none">
 					<div class='form-group'data-toggle="tooltip" data-placement="bottom" data-original-title="Specify the length of each word here.">
 						<label for="wordlength" >Word length</label>
-						<input id="wordlength" class='wordlength form-control' type='number'></input>
+						<input id="wordlength" class='wordlength form-control' type='number' min="1"></input>
 					</div>
 					<div class='form-group'data-toggle="tooltip" data-placement="bottom" data-original-title="Specify the word break symbol here.">
 						<label for="wordbreak" >Word break</label>
@@ -332,7 +332,7 @@
 		    	<div class="form-inline">
 					<div class='form-group' data-toggle="tooltip" data-placement="top" data-original-title="Enter the number of graph nodes here.">
 						<label for="node" >No. of nodes</label>
-						<input id="node" class='numbermin form-control' type='number'></input>
+						<input id="node" class='numbermin form-control' type='number' min="1"></input>
 					</div>
 				</div>
 				<div class="form-inline">
@@ -355,7 +355,7 @@
 				<div class="form-inline nottree">
 					<div class="form-group" data-toggle="tooltip" data-placement="top" data-original-title="Enter the number of edges in integer or density of edges in percentage. ">
 						<label for="edge" >No. of edges</label>
-						<input id="edge" class='numbermax form-control' type='number'></input>
+						<input id="edge" class='numbermax form-control' type='number' min="1"></input>
 					</div>
 					<div class="checkbox">
 						<label data-toggle="tooltip" data-placement="top" data-original-title="Check here if you want the graph to be connected.">
