--- a/index.html
+++ b/index.html
@@ -266,36 +266,42 @@
 						</select>
 					</div>
 				</div>
-				<div class="row">
-					<div class='col-sm-12 repeat'>
-						<span class='times'>Repeat</span>
-						<input id="repeatNumber" class='repeattime form-control' type='number' min='1'></input>
-						<span class='times'>times</span>
-					</div>
-		    	</div>
-		        <div class="row popup-btn">
-		    		<button class="btn btn-primary" onClick="cancelClicked(this)">Cancel</button>
-		        	<button class="btn btn-primary" value="number" onClick="okclicked(this)">OK</button>
-		        </div>
-		    </div>
+				<div class="form-inline">
+				  <label>Repeat</label>
+				  <div class="form-group">
+						<div class="input-group" style="margin: 0;">
+				      <select id="repeateType" class="form-control" style="width: 95px;">
+								<option value="custom">Exact</option>
+								<option value="backref">Refer To</option>
+							</select>
+				      <input id="repeatNumber" class="repeattime form-control" type="number" min="1" style="background-color: white;">
+				    </div>
+			    </div>
+					<label>Times</label>
+				</div>
+	      <div class="row popup-btn">
+	    		<button class="btn btn-primary" onClick="cancelClicked(this)">Cancel</button>
+	       	<button class="btn btn-primary" value="number" onClick="okclicked(this)">OK</button>
+	      </div>
+	      </div>
 		    <div id="string" class="container popup">
 		    	<div class="form-inline">
 		    		<div class='form-group' data-toggle="tooltip" data-placement="top" data-original-title="Enter the length of the string you want.">
 		    			<label for="stringlength" >String length</label>
-						<input id="stringlength" class='form-control' type='number' min="1"></input>
+							<input id="stringlength" class='form-control' type='number' min="1"></input>
+						</div>
+						<div class='form-group'>
+							<select id="charset" class='form-control' data-toggle="tooltip" data-placement="top" data-original-title="Click to choose a charset you want.">
+								<option value='ascii'>ASCII</option>
+								<option value='unicode'>Unicode</option>
+							</select>
+						</div>
 					</div>
-					<div class='form-group'>
-						<select id="charset" class='form-control' data-toggle="tooltip" data-placement="top" data-original-title="Click to choose a charset you want.">
-							<option value='ascii'>ASCII</option>
-							<option value='unicode'>Unicode</option>
-						</select>
+					<div class="row">
+						<div class="col-sm-12">
+							<span>Advanced settings</span><i class="fa fa-angle-double-down" data-toggle="tooltip" data-placement="right" data-original-title="If you want a long string of lines of words. Click here."></i>
+						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-12">
-						<span>Advanced settings</span><i class="fa fa-angle-double-down" data-toggle="tooltip" data-placement="right" data-original-title="If you want a long string of lines of words. Click here."></i>
-					</div>
-				</div>
 				<div class="form-inline advanced" style="display:none">
 					<div class='form-group' data-toggle="tooltip" data-placement="top" data-original-title="Specify the length of each line here.">
 						<label for="linglength" >Line length</label>
@@ -316,13 +322,19 @@
 						<input id="wordbreak" class='wordbreak form-control' type='text'></input>
 					</div>				
 				</div>
-				<div class="row">
-					<div class='col-sm-12 repeat'>
-						<span class='times'>Repeat</span>
-						<input id="repeatString" class='repeattime form-control' type='number' min='1'>
-						<span class='times'>times</span>
-					</div>
-		    	</div>
+				<div class="form-inline">
+				  <label>Repeat</label>
+				  <div class="form-group">
+						<div class="input-group" style="margin: 0;">
+				      <select id="repeateType" class="form-control" style="width: 95px;">
+								<option value="custom">Exact</option>
+								<option value="backref">Refer To</option>
+							</select>
+							<input id="repeatString" class='repeattime form-control' type='number' min='1'>
+				    </div>
+			    </div>
+					<label>Times</label>
+				</div>
 		        <div class="row popup-btn">
 		    		<button class="btn btn-primary" onClick="cancelClicked(this)">Cancel</button>
 		        	<button class="btn btn-primary" value="string" onClick="okclicked(this)">OK</button>
@@ -386,13 +398,19 @@
 						</select>
 					</div>
 				</div>
-		    	<div class="row">
-					<div class='col-sm-12 repeat'>
-						<span class='times'>Repeat</span>
-						<input id="repeatGraph" class='repeattime form-control' type='number' min='1'></input>
-						<span class='times'>times</span>
-					</div>
-		    	</div>
+		    		<div class="form-inline">
+		    		  <label>Repeat</label>
+		    		  <div class="form-group">
+		    				<div class="input-group" style="margin: 0;">
+		    		      <select id="repeateType" class="form-control" style="width: 95px;">
+		    						<option value="custom">Exact</option>
+		    						<option value="backref">Refer To</option>
+		    					</select>
+		    					<input id="repeatGraph" class='repeattime form-control' type='number' min='1'></input>
+		    		    </div>
+		    	    </div>
+		    			<label>Times</label>
+		    		</div>
 		        <div class="row popup-btn">
 		    		<button class="btn btn-primary" onClick="cancelClicked(this)">Cancel</button>
 		        	<button class="btn btn-primary" value="graph" onClick="okclicked(this)">OK</button>
