delete UI done, add data will bring up popup directly

--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
 		<div id="editor">
 			<input id='sixth_element' class="form-control" type="text" placeholder="Your data set name here...">
 			<div id="data-field" class="seventh_element">
-				<div class='data-block'> 
+				<div class='data-block'>
+					<a href="#">
 					<span class="order fa-stack">
 						<i class="fa fa-circle-thin fa-stack-2x"></i>
 						<i class="fa fa-stack-1x">1</i>
 					</span>
+					</a>
 					<div class="column">
 						<input class="btn btn-default" editable="false" readonly="on" placeholder="Data Type" onclick="chooseDataType(this)">
 						<i class="fa fa-folder-open"></i>
