backfef done draft done, need test

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 				  <label>Repeat</label>
 				  <div class="form-group">
 						<div class="input-group" style="margin: 0;">
-				      <select id="repeateType" class="form-control" style="width: 95px;">
+				      <select id="repeatTypeNumber" class="form-control" style="width: 95px;" onchange="repeatTypeChanged(this)">
 								<option value="custom">Exact</option>
 								<option value="backref">Refer To</option>
 							</select>
@@ -328,7 +328,7 @@
 				  <label>Repeat</label>
 				  <div class="form-group">
 						<div class="input-group" style="margin: 0;">
-				      <select id="repeateType" class="form-control" style="width: 95px;">
+				      <select id="repeatTypeString" class="form-control" style="width: 95px;">
 								<option value="custom">Exact</option>
 								<option value="backref">Refer To</option>
 							</select>
@@ -404,7 +404,7 @@
 		    		  <label>Repeat</label>
 		    		  <div class="form-group">
 		    				<div class="input-group" style="margin: 0;">
-		    		      <select id="repeateType" class="form-control" style="width: 95px;">
+		    		      <select id="repeatTypeGraph" class="form-control" style="width: 95px;">
 		    						<option value="custom">Exact</option>
 		    						<option value="backref">Refer To</option>
 		    					</select>
